[package]
name = "rstorage"
version = "0.1.0"
edition = "2021"
authors = ["DanyalMhai@gmail.com"]
readme = "README.md"
description = "Blazingly fast, durable, high concurrent HashMap"
license = "Apache-2.0"
keywords = ["tokio", "durable storage", "in-memory table", "high_concurrent"]
homepage   = "https://github.com/Rustixir/durableMap"
repository = "https://github.com/Rustixir/durableMap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17.0", features = ["rt", "sync", "time"]}
simple_wal = "0.3.0"
dashmap = "5.2.0"
serde = "1.0.136"
serde_derive = "1.0.136"
bincode = "1.3.3"